--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,12 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
 
 
-/*Stili contentuto principale*/
+/*STILI CONTENUTO PRINCIPALE*/
 
 #wrapper{
     height: calc(100vh - 100px);
@@ -32,26 +35,177 @@
     
 }
 
+
+
+/*STILI SCATOLA OMBRATA CON BOTTONE UPGRADE*/
 #shadowBox{
     height: 100px;
-    background-color: #080b12;
-    opacity: .5;
+    background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
     z-index: 99;
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
 }
 
 #upgradeButton{
+    text-decoration: none;
     color: white;
     background-color: #080b12;
-    padding: 10px 50px;
+    padding: 1rem 2rem;
     border: 1px solid white;
-    border-radius: 20px;
+    border-radius: 30px;
+    font-weight: bold;
+    margin-right: 16rem;
+    
+}
+
+#upgradeButton:hover{ 
+    padding: 1.3rem 2.5rem;
+}
+
+
+
+/*STILI SIDEBAR*/
+#sideBar{
+    padding: 1.5rem;
+    color: #727272;
+    font-weight: bold;
+    line-height: 2.5rem;
+    position: relative;
+}
+
+#sideBar a{
+    display: block;
+}
+
+#sideBarMenu{
+    margin: 1rem auto;
+}
+
+#logoImg{
+    width: 11rem;
+}
+
+/* .noDecoration{
+    text-decoration: none;
+} */
+
+.selectedIcon{
+    border-left: 3px solid yellowgreen;
+    color: #ffffff;
+}
+
+.sideBarIcons{
+    width: 2rem;
+    vertical-align: middle;
+    color: #727272;
+}
+
+.showSpan{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+
+#sideBar ul{
+    list-style-type: none;
+}
+
+#sideBar i{
+    color: #000000;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.containerSquare{
+    display: inline-block;
+    background-color: #a3a3a3;
+    padding: .2rem .5rem;
+    height: 2.5rem;
+}
+
+#sideBar a:hover {
+    color: #ffffff;
+}
+
+
+
+.profileCard{
+    width: 12.5rem;
+    padding: 5px;
+    margin-top: auto;
+    position: fixed;
+    bottom: 110px;
+    z-index: 99;
+
+    /* DEBUG
+    border: 1px dashed white; */
+}
+
+#userImg{
+    background-color: grey;
+    border-radius: 50%;
+    display: inline-block;
+    width: 1.7rem;
+    height: 1.7rem;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+.profileContainer span{
+    color: #ffffff;
+    margin-left: .5rem;
+}
+
+.downloadContainer{
+    width: 100%;
+    margin-bottom: .3rem;
+    border-bottom: 1px solid gray;
+}
+
+.downloadContainer img{
+    width: 1.3rem ;
+    vertical-align: middle;
+}
+
+.playlistContainer{
+    overflow-y: auto;
+}
+
+
+/*STILI MAIN CONTENT*/
+
+.navCol li{
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 2rem;
+
+}
+
+.navCol li a:hover{
+    color: #ffffff;
+}
+
+.selected{
+    border-left: 0;
+    border-bottom: 2px solid yellowgreen ;
+    
+}
+
+.navRow{
+    margin-top: 120px;
+}
+
+.navCol a{
     font-weight: bold;
 }
 
-/*stili controller*/
+
+
+/*STILI CONTROLLER IN BASSO*/
 #controller{
     height: 100px;
     background-color: #282828;
@@ -59,14 +213,14 @@
 }
 
 #playingAlbum {
-    width: 5rem;
+    width: 4rem;
     margin: 0 2rem;
     vertical-align: middle;
 }
 
 #controller .col i{
     vertical-align: middle;
-    margin: 0 .5rem;
+    margin: 2.5rem .5rem;
 }
 
 #controller .playerCol i{
@@ -107,14 +261,19 @@
 /*debug*/
 .row{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 .col{
-    border: 1px dashed white;
     
     
+    /* DEBUG
+    border: 1px dashed white; */
+       
 }
-
+.controllerRow{
+    justify-content: space-between;
+    align-items: center;
+}
 
 
 
@@ -129,11 +288,13 @@ SLIDER STILI
 *************************/
 
 .sliderContainer{
-    width: 100%;
 
-    /*DEBUG*/
-    border: 1px dashed yellow;
-    
+    /* DEBUG
+    border: 1px dashed yellow; */ 
+}
+
+.sliderVolumeContainer{
+    display: inline-block ;
 }
 
 .slider{
@@ -157,23 +318,22 @@ SLIDER STILI
     background: #ffffff; 
     cursor: pointer; 
     opacity: 0;
-  }
+}
 
-  .slider::-moz-range-thumb:hover{
+.slider::-moz-range-thumb:hover{
     opacity: 1;
-  }
+}
 
-/* .slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 100%; 
-    height: 25px; 
-    background: #d3d3d3; 
-    outline: none; 
-    opacity: 0.7; 
-    -webkit-transition: .2s; 
-    transition: opacity .2s;
-  } */
+
+
+.slider::-moz-range-progress{
+    background-color: #c5c5c5;
+}
+
+.slider::-moz-range-progress:hover{
+    background-color: yellowgreen;
+}
+
 
 
 
